--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,17 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "groq-sdk": "^0.3.0",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "groq-sdk": "^0.3.0",
-    "lucide-react": "^0.344.0"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
+    "@types/react": "19.2.9",
     "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
